B&L QA/objects/Product_Complaint_Product__c.object
<CustomObject>
    <description>Contains the Products that are associated with Product Complaints (Product Cases)</description>
    <fields>
        <fullName>CATSWeb_Complaint_Number__c</fullName>
        <description>For Product Complaints, pull this data in from the related Case so that it can be displayed on email alerts.</description>
        <formula>Case__r.CATSWeb_Complaint_Number__c</formula>
        <label>CATSWeb Complaint Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carton_Lot_Number__c</fullName>
        <label>Carton Lot Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_ID_18__c</fullName>
        <description>Brings in the 18-character Case ID for use in the outbound messages, since the Case__c field only provides the 15-character ID.</description>
        <formula>Case__r.ID_18__c</formula>
        <label>Case ID 18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Product_Complaint_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Complaint_Quantity_Int__c</fullName>
        <description>Integer version to for integration</description>
        <label>Complaint Quantity Int</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complaint_Quantity__c</fullName>
        <label>Complaint Quantity</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Received_Subsidiary__c</fullName>
        <label>Date Received Subsidiary</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Manufacture__c</fullName>
        <description>Populated when a valid Lot Number is found in query to FSCM</description>
        <label>Date of Manufacture</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delete_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Product Complaints, this field indicates whether or not the record has been deleted so that the before delete trigger knows whether or not to send the SOAP message to CW to delete the record.  True = it has been deleted already, false = it has NOT been deleted, and is the default value.</description>
        <label>Delete Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employee_Assigned_To__c</fullName>
        <description>For Product Complaints, pull this data in from the related Case so that it can be displayed on email alerts.</description>
        <formula>Case__r.Employee_Assigned_To__c</formula>
        <label>Employee Assigned To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>Value of this field is brought back when the Product Lot Number query from FSCM is returned</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fill_Size__c</fullName>
        <label>Fill Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 gm</fullName>
                </value>
                <value>
                    <fullName>3.5 gm</fullName>
                </value>
                <value>
                    <fullName>0.5 mL</fullName>
                </value>
                <value>
                    <fullName>1 mL</fullName>
                </value>
                <value>
                    <fullName>2 mL</fullName>
                </value>
                <value>
                    <fullName>2.5 mL</fullName>
                </value>
                <value>
                    <fullName>5 mL</fullName>
                </value>
                <value>
                    <fullName>10 mL</fullName>
                </value>
                <value>
                    <fullName>15 mL</fullName>
                </value>
                <value>
                    <fullName>30 mL</fullName>
                </value>
                <value>
                    <fullName>118 mL</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>36 Capsules</fullName>
                </value>
                <value>
                    <fullName>28 Count</fullName>
                </value>
                <value>
                    <fullName>32 Count</fullName>
                </value>
                <value>
                    <fullName>30 Soft Gels</fullName>
                </value>
                <value>
                    <fullName>50 Soft Gels</fullName>
                </value>
                <value>
                    <fullName>60 Soft Gels</fullName>
                </value>
                <value>
                    <fullName>120 Soft Gels</fullName>
                </value>
                <value>
                    <fullName>150 Soft Gels</fullName>
                </value>
                <value>
                    <fullName>180 Soft Gels</fullName>
                </value>
                <value>
                    <fullName>50 Tablets</fullName>
                </value>
                <value>
                    <fullName>60 Tablets</fullName>
                </value>
                <value>
                    <fullName>120 Tablets</fullName>
                </value>
                <value>
                    <fullName>240 Tablets</fullName>
                </value>
                <value>
                    <fullName>300 Tablets</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ID_18__c</fullName>
        <description>Brings in the 18-character ID for use in the outbound messages, since the ID field only provides the 15-character ID.</description>
        <formula>Id&amp;
CASE(
IF(CONTAINS(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;,RIGHT(LEFT(Id,3),1)),4,0)+
IF(CONTAINS(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;,RIGHT(LEFT(Id,4),1)),8,0)+
IF(CONTAINS(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;,RIGHT(LEFT(Id,5),1)),16,0),
0,&quot;A&quot;,1,&quot;B&quot;,2,&quot;C&quot;,3,&quot;D&quot;,4,&quot;E&quot;,5,&quot;F&quot;,6,&quot;G&quot;,7,&quot;H&quot;,8,&quot;I&quot;,
9,&quot;J&quot;,10,&quot;K&quot;,11,&quot;L&quot;,12,&quot;M&quot;,13,&quot;N&quot;,14,&quot;O&quot;,15,&quot;P&quot;,16,&quot;Q&quot;,17,&quot;R&quot;,
18,&quot;S&quot;,19,&quot;T&quot;,20,&quot;U&quot;,21,&quot;V&quot;,22,&quot;W&quot;,23,&quot;X&quot;,24,&quot;Y&quot;,25,&quot;Z&quot;,26,&quot;0&quot;,
27,&quot;1&quot;,28,&quot;2&quot;,29,&quot;3&quot;,30,&quot;4&quot;,31,&quot;5&quot;,&quot;0&quot;)&amp;
&quot;A&quot;&amp;
CASE(
IF(CONTAINS(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;,RIGHT(LEFT(Id,11),1)),1,0)+
IF(CONTAINS(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;,RIGHT(LEFT(Id,12),1)),2,0)+
IF(CONTAINS(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;,RIGHT(LEFT(Id,13),1)),4,0)+
IF(CONTAINS(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;,RIGHT(LEFT(Id,14),1)),8,0)+
IF(CONTAINS(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;,RIGHT(LEFT(Id,15),1)),16,0),
0,&quot;A&quot;,1,&quot;B&quot;,2,&quot;C&quot;,3,&quot;D&quot;,4,&quot;E&quot;,5,&quot;F&quot;,6,&quot;G&quot;,7,&quot;H&quot;,8,&quot;I&quot;,
9,&quot;J&quot;,10,&quot;K&quot;,11,&quot;L&quot;,12,&quot;M&quot;,13,&quot;N&quot;,14,&quot;O&quot;,15,&quot;P&quot;,16,&quot;Q&quot;,17,&quot;R&quot;,
18,&quot;S&quot;,19,&quot;T&quot;,20,&quot;U&quot;,21,&quot;V&quot;,22,&quot;W&quot;,23,&quot;X&quot;,24,&quot;Y&quot;,25,&quot;Z&quot;,26,&quot;0&quot;,
27,&quot;1&quot;,28,&quot;2&quot;,29,&quot;3&quot;,30,&quot;4&quot;,31,&quot;5&quot;,&quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID 18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Request_for_Product__c</fullName>
        <inlineHelpText>Required if Product Avalability = &quot;Requested&quot;</inlineHelpText>
        <label>Initial Request for Product</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Justification_for_No_Product_Return__c</fullName>
        <description>Required for Pharma if Product Availability = &quot;Return not Required&quot;</description>
        <label>Justification for No Product Return</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Labeled_Axis__c</fullName>
        <label>Labeled Axis</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Labeled_Base_Curve__c</fullName>
        <label>Labeled Base Curve</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Labeled_Cylinder__c</fullName>
        <label>Labeled Cylinder</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Labeled_Power__c</fullName>
        <label>Labeled Power</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_Email__c</fullName>
        <description>Stores the Email address of the current user so that it can be sent with the outbound message for error messages</description>
        <formula>LastModifiedBy.Email</formula>
        <label>Last Modified By Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lens_Type_Used__c</fullName>
        <description>For VC Product Complaints, captures the Lens Type Used for LENSCARE complaints for mapping to CATSWeb.</description>
        <label>Lens Type Used</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <description>For Product Complaints, pulling LOB from Case to send to Product Line Item in CW</description>
        <formula>Text(Case__r.Line_of_Business__c)</formula>
        <label>Line of Business</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Comments__c</fullName>
        <description>For Product Complaints, this will contain the comments in the user&apos;s native language, if they don&apos;t speak English.  It will then have to be translated into English in the &quot;Comments&quot; field</description>
        <label>Local Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Site__c</fullName>
        <description>This picklist should be filtered based on Product Type, which is an Apex-populated picklist.</description>
        <label>Manufacturing Site</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Controlled by Apex</fullName>
                    <default>true</default>
                    <label>Controlled by Apex</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Peroxide_System_Lens_Case_Returned__c</fullName>
        <description>For VC Product Complaints where Global Name Product = EasySept - Onesept and Product Availability = Returned. For mapping to CATSWeb.</description>
        <label>Peroxide System Lens Case Returned</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_and_Second_Lot__c</fullName>
        <label>Primary and Secondary Pkg - Same Lot #</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Private_Label_Account__c</fullName>
        <label>Private Label Account</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1-800-Contacts</fullName>
                </value>
                <value>
                    <fullName>Big Lots</fullName>
                </value>
                <value>
                    <fullName>CVS</fullName>
                </value>
                <value>
                    <fullName>Dollar General</fullName>
                </value>
                <value>
                    <fullName>Kmart</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>RiteAid</fullName>
                </value>
                <value>
                    <fullName>Safeway</fullName>
                </value>
                <value>
                    <fullName>SiHy 50E</fullName>
                </value>
                <value>
                    <fullName>Target</fullName>
                </value>
                <value>
                    <fullName>Unilens</fullName>
                </value>
                <value>
                    <fullName>Walgreens</fullName>
                </value>
                <value>
                    <fullName>Wal-Mart</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Availability__c</fullName>
        <label>Product Availability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Returned</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Not Available</fullName>
                </value>
                <value>
                    <fullName>Return Not Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <formula>Text(Case__r.Product_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <description>Populated by Local Name from the Product Complaint Product Type field</description>
        <label>Product Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Value 1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Lot_Number__c</fullName>
        <description>Value of this field is verified to FSCM in the ps_lot_control_inv table for validity</description>
        <label>Product Lot Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Number__c</fullName>
        <label>Product Number (or unknown)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <description>Automatically populated when user selects value of Product Description.  Apex used to obtain the value from the Product Complaint Product Type object.</description>
        <label>Global Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_Received_Int__c</fullName>
        <description>Integer version to for integration</description>
        <label>Quantity Received Int</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_Received_Open_Int__c</fullName>
        <description>Integer version to for integration</description>
        <label>Quantity Received Open Int</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_Received_Open__c</fullName>
        <label>Quantity Received Open</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Received_Sealed_Int__c</fullName>
        <description>Integer version to for integration</description>
        <label>Quantity Received Sealed Int</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_Received_Sealed__c</fullName>
        <label>Quantity Received Sealed</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Received__c</fullName>
        <label>Quantity Received</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_to_be_Returned_Int__c</fullName>
        <description>Integer version to for integration</description>
        <label>Quantity to be Returned Int</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_to_be_Returned__c</fullName>
        <label>Quantity to be Returned</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_for_Edit_Prior_Value__c</fullName>
        <description>Holds the prior value of the Reason for Edit field, so that the value can be used once the Reason for Edit is blanked.</description>
        <label>Reason for Edit Prior Value</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Edit__c</fullName>
        <description>When Case ha been sent to catsweb, all changes must have a reason for edit.</description>
        <label>Reason for Edit</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <description>Record Type Name used in the integration to CATSWeb for product complaints.</description>
        <label>Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_to_CATSWeb__c</fullName>
        <label>Send to CATSWeb</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_in_Use__c</fullName>
        <label>Time in Use</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial Use</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Not Used</fullName>
                </value>
                <value>
                    <fullName>Re-Use</fullName>
                </value>
                <value>
                    <fullName>&lt; 1 Month</fullName>
                </value>
                <value>
                    <fullName>1-3 Months</fullName>
                </value>
                <value>
                    <fullName>4-6 Months</fullName>
                </value>
                <value>
                    <fullName>7-12 Months</fullName>
                </value>
                <value>
                    <fullName>&gt; 1 Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Product Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <recordTypes>
        <fullName>EMEA_SU_Product</fullName>
        <active>true</active>
        <description>Record type for EMEA Surgical Product</description>
        <label>EMEA SU Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>NA_SU_Product</fullName>
        <active>true</active>
        <description>Record type for NA Surgical Product</description>
        <label>NA SU Product</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>